--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.3.1
+dj-database-url==0.5.0
 Django==3.1.7
 django-allauth==0.44.0
 django-countries==7.0
 django-crispy-forms==1.11.1
+gunicorn==20.0.4
 oauthlib==3.1.0
 Pillow==8.1.2
 PyJWT==2.0.1
