--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-crispy-forms==1.11.1
 gunicorn==20.0.4
 oauthlib==3.1.0
 Pillow==8.1.2
+psycopg2==2.8.6
 psycopg2-binary==2.8.6
 PyJWT==2.0.1
 python3-openid==3.2.0
